frontend: make it work. Also add deployement tools

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,10 +17,12 @@
       <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an html page.</p>
     </div>
     <div id="input">
-      <input type="text" placeholder="type the URL of an html page"/><input type="submit" value="guess" />
+      <form>
+	<input type="text" placeholder="type the URL of an html page"/><input type="submit" value="guess" />
+      </form>
     </div>
     <div id="output">
-      This is mostly about Geography and Science.
+      This is mostly about Machine Learning and Natural Language Programming...
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
