--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
+      <h1 class="display-4">sensimark</h1>
       <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an html page.</p>
     </div>
     <div id="input">
