--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,36 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="keywords" content="Artificial intelligence, Machine Learning, Natural Language Processing">
+	<meta name="robots" content="index,follow">
+	<meta name="author" content="Amirouche Boubekki">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" href="/static/app.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/app.css">
-
-    <title>sensimark ⋅ get sense of it</title>
-  </head>
-  <body>
-    <div class="jumbotron">
-      <h1 class="display-4">sensimark</h1>
-      <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an html page.</p>
-    </div>
-    <div id="input">
-      <form>
-	<input type="text" placeholder="type the URL of an html page"/><input type="submit" value="guess" />
-      </form>
-    </div>
-    <div id="output">
-      This is mostly about Machine Learning and Natural Language Programming...
-    </div>
-    <div id="graph"></div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-    <script src="/static/app.js"></script>
-  </body>
+	<title>Sensimark ⋅ get sense of it</title>
+    </head>
+    <body>
+	<div class="jumbotron">
+	    <h1 class="display-4"><a href="https://github.com/amirouche/sensimark">Sensimark</a>a></h1>
+	    <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an HTML page.</p>
+	</div>
+	<div id="input">
+	    <form>
+		<input type="text" placeholder="Input the URL of an HTML page (for example: https://en.wikipedia.org/wiki/Science)"/><input type="submit" value="guess" />
+	    </form>
+	</div>
+	<div id="output">
+	    This is mostly about Machine Learning and Natural Language Programming...
+	</div>
+	<div id="graph"></div>
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+	<script src="/static/app.js"></script>
+    </body>
 </html>
