--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <body>
 	<div class="jumbotron">
 	    <h1 class="display-4"><a href="https://github.com/amirouche/sensimark">Sensimark</a>a></h1>
-	    <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an HTML page.</p>
+	    <p class="lead">This is a very rough demo of a <i>machine learning</i> model for <i>natural language processing / understanding</i> that can <b>guess the subject</b> of an HTML page. <a hre="https://github.com/amirouche/sensimark">Source code is available on GitHub</a>.</p>
 	</div>
 	<div id="input">
 	    <form>
